# DogeGL

./: .gitignore  CMakeLists.txt  README.md  helpers.h  input.cpp  input.h  main.cpp
Graphics/: CMakeLists.txt  GL.h  camera.cpp  camera.h  cubemap.cpp  cubemap.h  entity.h  envmap.cpp  envmap.h  fbo.cpp  fbo.h  ibo.cpp  ibo.h  image.cpp  image.h  light.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  orthobase.cpp  orthobase.h  renderer.cpp  renderer.h  renderloop.cpp  renderloop.h  scene.cpp  scene.h  screenpass.cpp  screenpass.h  shader.cpp  shader.h  shadowmap.cpp  shadowmap.h  skybox.cpp  skybox.h  texture.cpp  texture.h  (+5 more)
MathsTools/: CMakeLists.txt  mat4.h  maths.h  vec.h  vec2.h  vec3.h  vec4.cpp  vec4.h
QtGUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  openglwidget.cpp  openglwidget.h  qfloatslider.cpp  qfloatslider.h  rendererinterface.h
Sdl2GUI/: CMakeLists.txt  input.h  mainwindow.cpp  mainwindow.h  openglwidget.cpp  openglwidget.h  rendererinterface.cpp
Utils/: codegenerators.cpp  codegenerators.h  timer.h
bin_environment/: bloompass.frag  brightpass.frag  cubenorm.mtl  env_spherical.frag  hi_sphere.mtl  line.frag  line.vert  quadFbo.frag  quadFbo.vert  reduce.frag  simple.frag  simple.geom  simple.vert  simple_tesc.glsl  simple_tese.glsl  skybox.frag  skybox.vert  toLuminance.frag  tonemap.frag
bin_environment/Astroboy/: astroBoy_walk_Maya.dae
bin_environment/SimpleModel/: demo.dae
bin_environment/Worn_Down_House/: destroyed_house.mb  destroyed_house.mtl
cmake_modules/: FindDevIL.cmake  FindGLEW.cmake  FindSDL2.cmake  Findassimp.cmake
