SET(LIBRARY_VERSION "0.1.0")
SET(LIBRARY_NAME "Sdl2GUI")

FILE(GLOB src *)

#file(GLOB_RECURSE SDL2_UI_FILES *.ui)

find_package(OpenGL REQUIRED) # OpenGL

include_directories(${SDL2_INCLUDE_DIR})


ADD_LIBRARY(Sdl2GUI STATIC ${src})

target_link_libraries(Sdl2GUI ${SDL2_LIBRARY} ${OPENGL_LIBRARIES})

SET_TARGET_PROPERTIES(Sdl2GUI PROPERTIES VERSION ${LIBRARY_VERSION})


